--- a/src/main/resources/META-INF/resources/admin/dashboard.xhtml
+++ b/src/main/resources/META-INF/resources/admin/dashboard.xhtml
@@ -6,7 +6,7 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
-<ui:composition template="/WEB-INF/templates/common/admin.xhtml">
+<ui:composition template="/templates/common/admin.xhtml">
 	<ui:define name="title">Cargo Dashboard</ui:define>
 
 	<ui:define name="content">
