--- a/src/main/resources/META-INF/resources/admin/tracking/track.xhtml
+++ b/src/main/resources/META-INF/resources/admin/tracking/track.xhtml
@@ -3,7 +3,7 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:f="http://java.sun.com/jsf/core">
-<ui:composition template="/WEB-INF/templates/common/admin.xhtml">
+<ui:composition template="/templates/common/admin.xhtml">
 	<ui:define name="title">Track Cargo</ui:define>
 	<ui:define name="content">
 
